--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,7 @@ footer a {
 }
 
 #join {
-  height: 23rem;
+  height: 25rem;
 }
 #join div {
   display: flex;
@@ -245,7 +245,7 @@ footer a {
 }
 
 #info {
-  height: 150rem;
+  height: 160rem;
   width: 100%;
 }
 #info div {
@@ -280,6 +280,9 @@ footer a {
 }
 #info div h3 span {
   color: rgb(247, 219, 158);
+}
+#info div ul li {
+  width: 80vw;
 }
 
 .collective img {
@@ -330,7 +333,6 @@ footer a {
 .teamcontainer div {
   margin-inline: 1.5vw;
   display: inline;
-  width: rem;
   height: auto;
   padding-top: 0px !important;
   text-align: center;
