--- a/styles.scss
+++ b/styles.scss
@@ -358,7 +358,7 @@ footer{
 //TEAM SECTION
 
 #team{
-    height: 40rem;
+    height: auto;
 }
 .teamcontainer{
     display: flex;
@@ -371,10 +371,10 @@ footer{
     margin: auto;
     border-radius: 9px;
     div{
-        margin-inline: 1.5vw;
         display: inline;
         height: auto;
         padding-top: 0px !important;
+        padding-inline: 0px !important;
         text-align: center;
         img{
             width: 14rem;
@@ -462,7 +462,13 @@ footer{
   // R E S P O N S I V E
 
 // Pantallas grandes
-
+@media (max-width: 1400px){
+    .teamcontainer{
+        width: 60vw;
+        flex-direction: column;
+        height: auto;
+    }
+}
 
   @media (max-width: 1100px) {
     html {
@@ -505,14 +511,7 @@ footer{
     #roadmap{
         height: 45vh;
     }
-    #team{
-        height: auto;
-    }
-    .teamcontainer{
-        width: 60vw;
-        flex-direction: column;
-        height: auto;
-    }
+    
     #faqs{
         height: auto;
     }
