--- a/styles.css
+++ b/styles.css
@@ -322,7 +322,7 @@ footer a {
 .teamcontainer {
   display: flex;
   width: 60vw;
-  height: 24rem;
+  height: 25rem;
   background-color: #ddd9d3;
   padding-top: 1% !important;
   padding-bottom: 0% !important;
@@ -348,7 +348,7 @@ footer a {
 }
 .teamcontainer div p {
   color: #4D525B;
-  margin: 0px;
+  margin-inline: 2vw;
   font-size: 1rem;
 }
 .teamcontainer div a img {
