--- a/xtron/styles.css
+++ b/xtron/styles.css
@@ -2,12 +2,20 @@ body{
     background-color: black;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
 }
 main{
     display: flex;
     flex-direction: column;
+    width: 65%;
+    margin: auto;
 }
 
+nav{
+    height: 70px;
+    background-color: aliceblue;
+
+}
 nav>ul>li{
     display: inline;
     margin-right: 10px;
@@ -18,6 +26,12 @@ nav>ul>li{
 .navigation, .socials{
     text-align: right;
 }
+
+
+.lore{
+    text-align: center;
+}
+
 
 .team>div{
     display: flex;
